# ShareBook-C_S

./: .gitignore  README.md
Analyse/: Publish Note and Communicate.vpp
Analyse/CommunicationDiagram/: interaction  login  publish_note  view_note
Analyse/StateDiagram/: note_state  ui_state  viewNote_state
Analyse/UseCaeDiagram/: use_case_diagram
Design/: Client.vpp  ClientJson.txt  Server.vpp  ServerJson.txt  loginClient.vpp  project.xml
code/Login/: CMakeLists.txt  boostnetwork.cpp  boostnetwork.h  cache.h  commentbroker.cpp  commentbroker.h  commentinterface.h  commentproxy.cpp  control.cpp  control.h  main.cpp  material.cpp  material.h  materialBroker.cpp  materialInterface.cpp  materialProxy.cpp  netizen.cpp  netizen.h  netizenBroker.cpp  note.cpp  note.h  noteBroker.cpp  noteBroker.h  noteInterface.cpp  noteInterface.h  noteProxy.h  relationalBroker.cpp  relationalBroker.h  server.cpp  server.h
code/client/: CMakeLists.txt  EditDialog.qml  Home.qml  InfoDialog.qml  Login.qml  Main.qml  MyButton.qml  NoteDetailPage.qml  Recommend.qml  client.cpp  client.h  control.cpp  control.h  image.qrc  imageprovider.cpp  imageprovider.h  main.cpp
code/server/: CMakeLists.txt  Main.qml  boostnetwork.cpp  boostnetwork.h  cache.h  comment.cpp  comment.h  commentbroker.cpp  commentbroker.h  commentinterface.cpp  commentproxy.cpp  commentproxy.h  control.cpp  control.h  main.cpp  material.cpp  material.h  materialBroker.cpp  materialBroker.h  materialInterface.h  materialProxy.cpp  materialProxy.h  netizen.cpp  netizen.h  netizenBroker.cpp  netizenBroker.h  netizenInterface.cpp  netizenInterface.h  netizenProxy.cpp  netizenProxy.h  note.cpp  note.h  noteBroker.cpp  noteBroker.h  noteInterface.cpp  noteInterface.h  noteProxy.cpp  noteProxy.h  relationalBroker.cpp  relationalBroker.h  (+6 more)
